--- a/css/style.css
+++ b/css/style.css
@@ -177,28 +177,21 @@ hr {
   width: 100%;
 }
 
-.about-section {
+.about-section, .project-section, .skills-section {
   background-color: white;
   border: 2px solid #b7a261;
   padding: 8px 16px;
   border-radius: 13px;
   margin: 2rem 0;
+  width: 100%;
 }
 
-.project-section {
-  background-color: white;
-  border: 2px solid #b7a261;
-  padding: 8px 16px;
-  border-radius: 13px;
-  margin: 2rem 0;
-}
-
-.projects {
+.projects, .skills {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-.project {
+.project, .skill {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
